--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url(../media/testbg.png) , url(..media/testbg2.jpg);
+  background-image: url(../media/testbg.png) , url(../media/testbg2.jpg);
   background-position: top left, bottom right;
   background-repeat: no-repeat;
   background-color: antiquewhite;
